# sense-pulse

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  99-pi-leds.rules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  claude.md  config.example.yaml  docker-compose.yml  pyproject.toml  sense-pulse-web.service  sense-pulse.service  setup.sh
.github/workflows/: ci.yml
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts  commands.ts  sources.ts
frontend/src/lib/components/: Aranet4Card.svelte  ConnectionStatus.svelte  LedMatrix.svelte  NetworkCamera.svelte  PTZControls.svelte  PiholeCard.svelte  SenseHatCard.svelte  SourceCard.svelte  SourceStatusBar.svelte  SystemCard.svelte  TailscaleCard.svelte  WeatherCard.svelte
frontend/src/lib/stores/: websocket.svelte.ts
frontend/src/lib/types/: sources.ts
frontend/src/lib/utils/: availability.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
plans/: 00-architecture-overview.md  01-foundation.md  02-sources-simple.md  03-source-sensehat.md  04-sources-hardware.md  05-orchestrator.md  06-web-gateway.md  07-sveltekit-frontend.md  08-docker-integration.md  09-testing-ci.md  CONTRACT.md
redis/: redis.conf
services/common/: pyproject.toml
services/common/sense_common/: __init__.py  config.py  ephemeral.py  models.py  persistent.py  redis_client.py
services/common/tests/: test_config.py  test_ephemeral.py  test_models.py  test_persistent.py  test_redis_client.py
services/orchestrator/: Dockerfile  pyproject.toml
services/orchestrator/orchestrator/: commands.py  config_seeder.py  health.py  lifecycle.py  main.py  runner.py  schedule.py
services/orchestrator/tests/: test_commands.py  test_config_seeder.py  test_lifecycle.py  test_runner.py  test_schedule.py
services/source-aranet4/: Dockerfile  pyproject.toml
services/source-aranet4/aranet4_svc/: main.py  scanner.py  source.py
services/source-aranet4/tests/: test_scanner.py  test_source.py
services/source-camera/: Dockerfile  pyproject.toml
services/source-camera/camera/: discovery.py  main.py  ptz.py  stream.py
services/source-camera/tests/: test_camera_stream.py  test_stream.py
services/source-pihole/: Dockerfile  pyproject.toml
services/source-pihole/pihole/: client.py  main.py  source.py
services/source-pihole/tests/: test_pihole_client.py  test_pihole_source.py
services/source-sensehat/: Dockerfile  pyproject.toml
services/source-sensehat/sensehat/: commands.py  controller.py  display.py  icons.py  main.py  pi_leds.py  schedule.py  source.py
services/source-sensehat/tests/: test_commands.py  test_controller.py  test_sensehat_schedule.py  test_source.py
services/source-system/: Dockerfile  pyproject.toml
services/source-system/system/: main.py  source.py
services/source-system/tests/: test_system_source.py
services/source-tailscale/: Dockerfile  pyproject.toml
services/source-tailscale/tailscale/: main.py  source.py
services/source-tailscale/tests/: test_tailscale_source.py
services/source-weather/: Dockerfile  pyproject.toml
services/source-weather/tests/: test_weather_source.py
services/source-weather/weather/: main.py  source.py
services/web-gateway/: Dockerfile  pyproject.toml
services/web-gateway/gateway/: app.py  auth.py  deps.py  main.py
services/web-gateway/gateway/routes/: command.py  config.py  health.py  sources.py  stream.py
services/web-gateway/gateway/websocket/: grid.py  sources.py
services/web-gateway/tests/: conftest.py  test_auth.py  test_command.py  test_config.py  test_gateway_stream.py  test_health.py  test_sources.py  test_stream.py  test_websocket.py
src/sense_pulse/: __init__.py  __main__.py  aranet4.py  cache.py  cli.py  config.py  context.py  controller.py  display.py  hardware.py  icons.py  pi_leds.py  pihole.py  schedule.py  system.py  tailscale.py
src/sense_pulse/baby_monitor/: __init__.py  stream_manager.py
src/sense_pulse/datasources/: __init__.py  aranet4_source.py  baby_monitor_source.py  base.py  network_camera_source.py  pihole_source.py  registry.py  sensehat_source.py  system_source.py  tailscale_source.py  weather_source.py
src/sense_pulse/devices/: __init__.py  aranet4.py  baby_monitor.py  display.py  network_camera.py  pihole.py  sensehat.py  sensehat_display.py  sensehat_sensors.py  system.py  tailscale.py
src/sense_pulse/services/: __init__.py  hardware.py
src/sense_pulse/utils/: __init__.py  network.py
src/sense_pulse/web/: __init__.py  app.py  auth.py  baby_monitor_routes.py  log_handler.py  routes.py
src/sense_pulse/web/templates/: baby_monitor.html  base.html  index.html
src/sense_pulse/web/templates/partials/: aranet4_controls.html  baby_monitor_controls.html  cache_weather_controls.html  display_controls.html  network_camera_controls.html  status_cards.html  unified_settings.html  weather_forecast.html
tests/: __init__.py  mock_datasource.py  test_aranet4.py  test_auth.py  test_cache.py  test_cli_context.py  test_config.py  test_context.py  test_datasources.py  test_hardware_service.py  test_routes_api.py  test_web_app.py
traefik/: traefik.yml
