[project]
name = "sense-pulse"
version = "0.4.0"
description = "Display Pi-hole statistics, Tailscale status, and sensor data on Sense HAT LED matrix"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["raspberry-pi", "sense-hat", "pi-hole", "tailscale", "led-display"]

dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    # sense-hat must be installed via apt: sudo apt install python3-sense-hat
]

[project.scripts]
sense-pulse = "sense_pulse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sense_pulse"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
