[project]
name = "sense-pulse"
version = "0.12.0"
description = "Pi-hole + Tailscale + Sensor monitoring microservice architecture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["raspberry-pi", "sense-hat", "pi-hole", "tailscale", "led-display", "microservices"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "services/common",
    "services/web-gateway",
    "services/orchestrator",
    "services/source-tailscale",
    "services/source-pihole",
    "services/source-system",
    "services/source-sensehat",
    "services/source-aranet4",
    "services/source-weather",
    "services/source-camera",
]

[tool.uv.sources]
sense-common = { workspace = true }

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "black==24.10.0",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "fakeredis[lua]>=2.26",
    "types-pyyaml==6.0.12.20240917",
    "types-requests==2.32.0.20241016",
    "sense-common",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | legacy
  | frontend
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "legacy", "frontend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["ARG", "S101"]
"**/tests/**/*.py" = ["ARG", "S101"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sense_hat.*",
    "aranet4.*",
    "bleak.*",
    "onvif.*",
    "zeep.*",
    "fakeredis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --import-mode=importlib"
testpaths = ["services/*/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
