[project]
name = "sense-common"
version = "0.12.0"
description = "Shared library for Sense Pulse microservices"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "redis[hiredis]>=5.2",
    "pydantic>=2.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sense_common"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
