[project]
name = "sense-orchestrator"
version = "0.12.0"
description = "Sense Pulse orchestrator - schedules and manages source containers"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
