[project]
name = "sense-source-aranet4"
version = "0.12.0"
description = "Sense Pulse Aranet4 BLE CO2 sensor source"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
    "aranet4>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aranet4_svc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
