[project]
name = "sense-source-camera"
version = "0.12.0"
description = "Sense Pulse network camera streaming source"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
    "onvif-zeep>=0.2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["camera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
