[project]
name = "sense-source-pihole"
version = "0.12.0"
description = "Sense Pulse Pi-hole stats source"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
    "httpx>=0.28",
    "tenacity>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pihole"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
