[project]
name = "sense-source-sensehat"
version = "0.12.0"
description = "Sense Pulse Sense HAT sensor + LED display service"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sensehat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
