[project]
name = "sense-source-system"
version = "0.12.0"
description = "Sense Pulse system metrics source"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
    "psutil>=6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["system"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
