[project]
name = "sense-source-weather"
version = "0.12.0"
description = "Sense Pulse weather data source"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
    "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
