[project]
name = "sense-gateway"
version = "0.12.0"
description = "Sense Pulse API gateway"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "sense-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "passlib>=1.7",
    "bcrypt>=4.2,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
